--- a/src/components/shop-header/shop-header.css
+++ b/src/components/shop-header/shop-header.css
@@ -3,12 +3,17 @@
   margin-bottom: 1rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .shop-header .logo {
   font-family: "Playfair Display", Georgia, serif;
   font-size: 2.5rem;
   padding-left: 1rem;
+  text-decoration: none;
+}
+
+.shop-header a {
   text-decoration: none;
 }
 
